[gd_scene load_steps=9 format=3 uid="uid://3fy0wk0ek2wl"]

[ext_resource type="Script" path="res://src/crash.gd" id="1_gray3"]
[ext_resource type="FontFile" uid="uid://slm2bct06tfv" path="res://assets/vcr.ttf" id="1_xsyi8"]
[ext_resource type="Texture2D" uid="uid://dallg2eqtofye" path="res://icon.png" id="2_sbk0v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr3nq"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sg74n"]
bg_color = Color(0.0585938, 0.0585938, 0.0585938, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_on4d5"]
bg_color = Color(0, 0, 0, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kleaw"]
bg_color = Color(0.117188, 0.117188, 0.117188, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_ewi87"]
default_font = ExtResource("1_xsyi8")
Button/styles/focus = SubResource("StyleBoxFlat_qr3nq")
Button/styles/hover = SubResource("StyleBoxFlat_sg74n")
Button/styles/normal = SubResource("StyleBoxFlat_on4d5")
Button/styles/pressed = SubResource("StyleBoxFlat_kleaw")

[node name="crash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ewi87")
script = ExtResource("1_gray3")

[node name="root" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="background" type="ColorRect" parent="root"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.523438, 0.523438, 0.523438, 0)

[node name="quote_label" type="Label" parent="root"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
text = "This Is The Quote Label
Unfortunately, It Is Not Your Mother."
horizontal_alignment = 1
vertical_alignment = 1

[node name="dump_label" type="RichTextLabel" parent="root"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 64.0
offset_right = -8.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
text = "Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls
Balls"

[node name="view_crash" type="Button" parent="root"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -56.0
offset_right = 168.0
offset_bottom = -8.0
grow_vertical = 0
text = "View Crash Dump"

[node name="restart" type="Button" parent="root"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -56.0
offset_right = 80.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="close" type="Button" parent="root"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -56.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"

[node name="icon" type="TextureRect" parent="root"]
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_top = 5.0
offset_right = 56.0
offset_bottom = 53.0
mouse_filter = 2
texture = ExtResource("2_sbk0v")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="root/view_crash" to="." method="_on_view_crash_dump_pressed"]
[connection signal="pressed" from="root/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="root/close" to="." method="_on_close_pressed"]
